----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-09-02 Marc Delisle  <lem9@users.sourceforge.net>
    * translators.html: azerbaijani, and change of address for
      swedish translator

2003-09-02 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/common.lib.php3: Fix displaying PHP code (bug #798804).

2003-09-01 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/mysql_charsets.lib.php3: Name of column is sometimes Default
      (bug #798426).
    * lang/estonian: Updated, thanks to Alvar Soome (finsoft).
    * lang/azerbaijani, lang/sync_lang.sh, libraries/select_lang.lib.php3: New
      translation, thanks to Shehriyar Imanov (sheki).

2003-08-31 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php3: extract ON DELETE, ON UPDATE for FOREIGN KEYs
    * libraries/relation.lib.php3: populate $foreign with ON DELETE, ON UPDATE

2003-08-28 Alexander M. Turek  <rabus@users.sourceforge.net>
    * README: Updated php / MySQL versions.

2003-08-28 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/display_export.lib.php3: Allow xml to be also default export
      (bug #796706).

2003-08-27 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_relation.php3: User forgot to define an index on the master table
      before adding a foreign key constraint: trap the error, warn the user
      and show him a link to the relevant doc

2003-08-27 Garvin Hicking <me@supergarv.de>
    * lang/german*: Update

2003-08-27 Michal Cihar  <nijel@users.sourceforge.net>
    * sql.php3, lang/*: Print view with full texts (RFE #742123).

2003-08-27 Alexander M. Turek  <rabus@users.sourceforge.net>
    * browse_foreigners.php3: undefined variable.

2003-08-26 Alexander M. Turek  <rabus@users.sourceforge.net>
    * libraries/common.lib.php3: Backwards compatibility.
    * tbl_change.php3: bug #795171 (foreign field empty when editing record).

2003-08-26 Michal Cihar  <nijel@users.sourceforge.net>